# sentry-scrubber

./: CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/scripts/: annotate_coverage.py  parse_semgrep.py
.github/workflows/: ai-review.yml  coverage.yml  publish.yaml  pytest.yaml  ruff.yaml  semgrep.yaml
sentry_scrubber/: __init__.py  scrubber.py
sentry_scrubber/tests/: test_scrubber.py
